k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: schoolms
  labels:
    app.kubernetes.io/name: schoolms
    app.kubernetes.io/managed-by: kubectl
